--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
             <a href="">Formulários</a>
         </nav>
     </header>
+    <main>
+        <section id="Listas">
+            <h2>Lista</h2>
+        </section>
+        <section>
+            <h2>Tabelas</h2>
+        </section>
+        <section><h2>Formulários</h2>
+        </section>
+    </main>
     
 </body>
 </html>
